workloads/quarkus-rollouts-demo/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: quarkus-demo
  namespace: quarkus-demo
spec:
  replicas: 10
  revisionHistoryLimit: 1
  minReadySeconds: 2
  selector:
    matchLabels:
      app: quarkus-demo
  template:
    metadata:
      labels:
        app: quarkus-demo
    spec:
      serviceAccountName: quarkus-demo
      containers:
      - name: quarkus-demo
        #image: ghcr.io/kdubois/argo-rollouts-quarkus-demo:main
        #image: ghcr.io/kdubois/argo-rollouts-quarkus-demo:v1.stable
        #image: ghcr.io/kdubois/argo-rollouts-quarkus-demo:v2.nullpointer
        image: ghcr.io/kdubois/argo-rollouts-quarkus-demo:v3.memoryleak
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      # Add revision labels to stable and canary pods
      stableMetadata:
        labels:
          role: stable
      canaryMetadata:
        labels:
          role: canary
      analysis:
        startingStep: 2 # delay starting analysis run until we have collected enough metrics
        args:
        - name: service-name
          value: quarkus-demo-canary.quarkus-demo.svc.cluster.local
        - name: stable-pod-label
          value: app=quarkus-demo,role=stable
        - name: canary-pod-label
          value: app=quarkus-demo,role=canary
        - name: namespace
          value: quarkus-demo
        - name: canary-pod
          valueFrom:
            podTemplateHashValue: Latest
        templates:
          #- templateName: success-rate
          - templateName: ai-analysis-agent
      canaryService: quarkus-demo-canary
      stableService: quarkus-demo-stable
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
            - quarkus-demo
      steps:
      - setWeight: 10
      - pause: { duration: 10s } # 10 seconds to start gathering metrics before starting analysis
      - setWeight: 10
      - pause: { duration: 30s } # 30 seconds to let the analysis do its job
      - setWeight: 60
      - pause: { duration: 20s } # if everything is going well, continue rolling out but give some time to manually abort if needed
      - setWeight: 100
      - pause: { duration: 5s } # finish rolling out to everyone
