workloads/quarkus-rollouts-demo/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo-canary
  namespace: quarkus-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: quarkus-demo
