workloads/quarkus-rollouts-demo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo
  namespace: quarkus-demo
spec:
  to:
    kind: Service
    name: quarkus-demo-stable
    weight: 100
  alternateBackends:
  - kind: Service
    name: quarkus-demo-canary
    weight: 0
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
